# openglcourse

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/Resources/Shaders/: fragment.glsl  vertex.glsl
